hphp/test/zend/bad/ext/ldap/tests/ldap_bind_variation.php.skipif
<?php require_once dirname(__FILE__) .'/skipif.inc'; ?>
<?php require_once dirname(__FILE__) .'/skipifbindfailure.inc'; ?>